<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_cost"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="6dp"
        android:autofillHints="false" />

    <TextView
        android:id="@+id/howWasCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/howWasCost"
        app:layout_constraintTop_toBottomOf="@id/howWasCost"
        android:id="@+id/radioGroup"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/awesomeRadio"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/awesome"
            android:id="@+id/awesomeRadio"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okayish"
            android:id="@+id/okayishRadio"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nehhhhh"

            android:id="@+id/nehhRadio"
            />
    </RadioGroup>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:text="@string/round_off_tip"
        android:checked="true"
        android:gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:thumbTint="@color/design_default_color_primary_dark"
        android:backgroundTint="@color/material_on_primary_emphasis_medium"
        android:id="@+id/switchcase2"

        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchcase2"
        android:text="@string/calculate"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_calculate"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/tip_amount"
        android:id="@+id/text_amount"
        />

</androidx.constraintlayout.widget.ConstraintLayout>